src/test/deca/context/invalid/expr_cast_boolean_to_Object.deca
// Test of the rule (3.39) : can't cast boolean to Object.

{
	Object var1;
	boolean var2;
	var1 = (Object)(var2);
}

// Résultat :
//# a
